# pysonnet19

./: LICENSE  README.md  pyproject.toml
examples/: sonnetconfig_firstscript.py
pysonnet19/: __init__.py  create_macro.py  runner.py
