[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysonnet19"
version = "0.1.0"
description = "Python wrapper for working with Sonnet 19 Macro files. This package is not affiliated or endorsed by the official Sonnet software team."
authors = [
    {name = "Corwin Shiu", email = "corwin.shiu@nist.gov"}
]
readme = "README.md"
license = {text = "MIT"}
dependencies = ["numpy", "scipy", "matplotlib", "gdspy"]